--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sikerja_ui_kit:
+    path: ../
 
 dev_dependencies:
   change_app_package_name: any
