--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,13 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-# assets:
-#   - images/a_dot_burr.jpeg
-#   - images/a_dot_ham.jpeg
-#
+  assets:
+    - assets/animations/
+    - assets/icons/
+    - assets/illustration/
+    - assets/logo/
 
 flutter_gen:
   output: lib/src/core/assets/gen
   integrations:
-    flutter_svg: true
     lottie: true
